# genshiro-substrate-chain

./: .gitignore  Cargo.toml  README.md  integration_test.json
docs/: index.html  search-index.js  settings.html  source-files.js
docs/gens_aggregates/: all.html  enum.Call.html  enum.Error.html  index.html  struct.AccountUserGroups.html  struct.Module.html  struct.TotalUserGroups.html  trait.Trait.html
docs/gens_bailsman/: all.html  enum.Call.html  enum.Error.html  index.html  struct.GenesisConfig.html  struct.Module.html  trait.BailsmanManager.html  trait.LtvChecker.html  trait.Trait.html  trait.VolatilityGetter.html
docs/gens_bailsman/rate/: enum.LtvError.html  fn.aggregate_portfolio_volatilities.html  fn.balances.html  fn.borrower_volatility.html  fn.interest_rate.html  fn.ltv.html  fn.scale.html  fn.total_interim.html  fn.total_usd.html  fn.total_weights.html  index.html  struct.Cdb.html  struct.InterestRateSettings.html  struct.TotalBalance.html  trait.InterestRateDataSource.html
docs/gens_balances/: all.html  enum.Call.html  enum.Error.html  enum.RawEvent.html  enum.SignedBalance.html  index.html  sidebar-items.js  struct.Account.html  struct.GenesisConfig.html  struct.Module.html  trait.BalanceChecker.html  trait.BalanceGetter.html  trait.EqCurrency.html  trait.Trait.html  trait.WeightInfo.html  type.Event.html
docs/gens_balances/balance_adapter/: index.html  sidebar-items.js  struct.BalanceAdapter.html
docs/gens_balances/currency/: enum.Currency.html  index.html
docs/gens_balances/imbalances/: index.html  struct.NegativeImbalance.html  struct.PositiveImbalance.html
docs/gens_distribution/: all.html  enum.Call.html  index.html  struct.DefaultInstance.html  struct.Instance0.html  struct.Instance1.html  struct.Instance10.html  struct.Instance11.html  struct.Instance12.html  struct.Instance13.html  struct.Instance14.html  struct.Instance15.html  struct.Instance2.html  struct.Instance3.html  struct.Instance4.html  struct.Instance5.html  struct.Instance6.html  struct.Instance7.html  struct.Instance8.html  struct.Instance9.html  struct.Module.html  trait.Trait.html
docs/gens_oracle/: all.html  constant.KEY_TYPE.html  enum.Call.html  enum.Error.html  enum.PriceSource.html  enum.RawEvent.html  index.html  struct.DataPoint.html  struct.GenesisConfig.html  struct.Module.html  struct.PricePoint.html  trait.OnNewPrice.html  trait.PriceGetter.html  trait.Trait.html  type.Event.html
docs/gens_oracle/crypto/: index.html  struct.AuthId.html  struct.Pair.html  struct.Public.html  struct.Signature.html  struct.TestAuthId.html
docs/gens_primitives/: all.html  enum.InterestRateError.html  enum.TransferReason.html  enum.UserGroup.html  index.html  sidebar-items.js  struct.TotalAggregates.html  trait.AccountGetter.html  trait.Aggregates.html  trait.FeeManager.html
docs/gens_primitives/currency/: enum.Currency.html  index.html
docs/gens_rate/: all.html  constant.KEY_TYPE.html  enum.Call.html  enum.Error.html  index.html  struct.GenesisConfig.html  struct.LastFeeUpdate.html  struct.Module.html  struct.NowMillisOffset.html  struct.ReinitRequest.html  trait.Trait.html  type.AuthIndex.html
docs/gens_session_manager/: all.html  enum.Call.html  enum.Error.html  enum.RawEvent.html  index.html  struct.GenesisConfig.html  struct.IsChanged.html  struct.Module.html  struct.Validators.html  trait.Trait.html  type.Event.html
docs/gens_treasury/: all.html  enum.Call.html  enum.Error.html  index.html  struct.Module.html  trait.EqBuyout.html  trait.Trait.html
docs/gens_vesting/: all.html  enum.Call.html  enum.Error.html  enum.RawEvent.html  index.html  struct.GenesisConfig.html  struct.Module.html  struct.Vested.html  struct.Vesting.html  struct.VestingInfo.html  trait.Trait.html  trait.WeightInfo.html  type.Event.html
docs/gens_volatility/: all.html  enum.Call.html  enum.PricePeriod.html  index.html  struct.Corellation.html  struct.GenesisConfig.html  struct.LastUpdate.html  struct.Module.html  struct.Prices.html  struct.Volatility.html  trait.Trait.html  trait.VolatilityGetter.html
docs/gens_whitelists/: all.html  enum.Call.html  enum.Error.html  enum.RawEvent.html  index.html  struct.GenesisConfig.html  struct.Module.html  struct.WhiteList.html  trait.CheckWhitelisted.html  trait.Trait.html  type.Event.html
gens-integration-testing/: Cargo.toml
gens-integration-testing/gens-integration-testing-macro/: Cargo.toml
gens-integration-testing/src/: balances.rs  ethkey.rs  main.rs  rate.rs  requester.rs  runtime.rs  test.rs  test_context.rs  vesting.rs
gens-primitives/: Cargo.toml
gens-primitives/src/: currency.rs
gens-utils/: Cargo.toml
gens-utils/src/: log.rs  math.rs  test.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  executor.rs  rpc.rs  service.rs
pallets/gens-balances/: Cargo.toml
pallets/gens-balances/src/: balance_adapter.rs  benchmarking.rs  lib.rs
pallets/gens-distribution/: Cargo.toml
pallets/gens-session-manager/: Cargo.toml
pallets/gens-vesting/: Cargo.toml
pallets/gens-vesting/src/: lib.rs  mock.rs  tests.rs
parachain-genshiro-mainnet/: genesis-state  genesis-wasm
runtime/: Cargo.toml
runtime/src/: lib.rs
(+121 files in other folders)
