[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "gens-vesting"
version = "0.1.0"
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"]}
enumflags2 = {version = "0.6.2"}
serde = {version = "1.0.101", optional = true}

[dependencies.sp-arithmetic]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-system'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
package = 'frame-benchmarking'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dependencies.gens-balances]
default-features = false
package = "gens-balances"
path = "../gens-balances"
version = "0.1.0"

[dependencies.gens-primitives]
default-features = false
package = "gens-primitives"
path = "../../gens-primitives"
version = "0.1.0"

[dependencies.gens-utils]
default-features = false
package = "gens-utils"
path = "../../gens-utils"
version = "0.1.0"

[dev-dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dev-dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dev-dependencies.sp-storage]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = "v2.0.0-rc6"
version = '2.0.0-rc6'

[dev-dependencies]
hex-literal = "0.2.1"

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "serde",
  "codec/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "sp-runtime/std",
  "frame-support/std",
  "frame-system/std",
  "gens-balances/std",
  "gens-primitives/std",
  "gens-utils/std",
]
